# abby

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  ableton.ts  agent.ts  backend_steps.md  build.ts  connect.ts  consts.ts  context.ts  db.ts  deno.json  genre_generator.ts  live.db  prompts.ts  routes.ts  static-server.ts  types.d.ts
audio_parser/: audio_device_reader.py  librosa_analyzer.py  llm.py  llm_analyzer.py  logger.py  main.py  prompts.py
backend/: main.py  pyproject.toml  requirements.txt
backend/AbbyAbleton/: __init__.py
backend/app/: CLAUDE.md  ableton.py  ableton_client.py  agent.py  analytics.py  chat.py  events.py  formatting.py  indexing.py  live_docs.py  logger.py  main.py  models.py  routes.py  shared.py  skills.py  sync.py  tts.py
backend/app/ableton/: client.py
backend/app/agent/: agent.py
backend/app/api/: routes.py
backend/app/core/: config.py  context.py  database.py  prompts.py
backend/app/db/: __init__.py  ableton_repository.py  chat_repository.py  db_service.py  models.py  project_repository.py
backend/app/models/: models.py
backend/app/services/: db_service.py  genre_generator.py
backend/tests/integration/: test_ableton_listener.py
frontend/: index.html  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/src/: App.svelte  app.css  script.ts  types.d.ts
frontend/src/components/: Chat.svelte  ConnectionStatus.svelte  GenreSelector.svelte  Track.svelte  (+6 more)
menubar/: README.md  project.yml
menubar/AbbyBar/: AbbyBarApp.swift  Info.plist
menubar/AbbyBar.xcodeproj/: project.pbxproj
(+20 files in other folders)
