[project]
name = "abby-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "fish-audio-sdk>=1.2.0",
    "google-genai>=1.56.0",
    "posthog>=7.9.3",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.62.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "write: marks tests that mutate Ableton state (deselect with '-m \"not write\"')",
]
